# incc

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  UNLICENSE.md
src/: CMakeLists.txt  main.cpp
src/unicode/: CMakeLists.txt  construct_unicode_database.py  construct_unicode_hpp.py
